# Ex4

./: .gitignore  Algorithm.h  Block.cpp  Block.h  CMakeLists.txt  CacheFS.cpp  CacheFS.h  FBRAlg.h  File.cpp  LFUAlg.h  LICENSE  LRUAlg.h  Makefile  README  TEST.cpp  filereader.cpp  myFile.cpp  myFile.h
